examples/test/testpolicy16857.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16857
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key24: value35
      key41: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value48
          key12: value20
          key22: value25
      podSelector:
        matchLabels:
          key43: value1
